@@ -9,8 +9,8 @@ def call(ghprbActualCommit, ghprbCommentBody, ghprbPullId, ghprbPullTitle, ghprb
     def TEST_MODE = "simple"
     def PARALLEL_NUMBER = 18
     def MVN_PROFILE = ""
-    def MVN_PROFILE_SCALA_2_12 = "-Pspark-2.4-scala-2.12"
-    def MVN_PROFILE_SCALA_2_12_TEST = ["-Pjenkins-test-spark-3.0", "-Pjenkins-test-spark-2.4"]
+    def MVN_PROFILE_SCALA_2_12 = "-Pspark-3.0-scala-2.12"
+    def MVN_PROFILE_SCALA_2_12_TEST = ["-Pjenkins-test-spark-3.0"]
     def MVN_PROFILE_SCALA_2_11 = "-Pspark-2.3-scala-2.11"
     def MVN_PROFILE_SCALA_2_11_TEST = ["-Pjenkins-test-spark-2.4", "-Pjenkins-test-spark-2.3"]
     
@@ -158,15 +158,6 @@ def call(ghprbActualCommit, ghprbCommentBody, ghprbPullId, ghprbPullTitle, ghprb
                         sh """
                             export MAVEN_OPTS="-Xmx6G -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=51M"
                             mvn clean test ${MVN_PROFILE} ${MVN_PROFILE_SCALA_2_12} ${MVN_TEST_PROFILE} -Dtest=moo ${mvnStr}
-                        """
-                    }
-
-                    sh "./dev/change-scala-version.sh 2.11"
-
-                    MVN_PROFILE_SCALA_2_11_TEST.each { MVN_TEST_PROFILE ->
-                        sh """
-                            export MAVEN_OPTS="-Xmx6G -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=51M"
-                            mvn clean test ${MVN_PROFILE} ${MVN_PROFILE_SCALA_2_11} ${MVN_TEST_PROFILE} -Dtest=moo ${mvnStr}
                         """
                     }
                 }
